@startuml models_p2

skinparam ArrowThickness 1.25
skinparam ClassBorderThickness 1.5
skinparam ClassBackgroundColor #FEFECE
skinparam ClassBorderColor #B20842

skinparam dpi 400
skinparam Shadowing true

' -----------------------------------------------

hide empty methods
hide empty members

' models
' -----------------------------------------------
'                      | | |
'                      V V V

' File
' -----------------------------------------------

package FileStorage {

    class Image #LightGray {
        Id: Number
        Extension: Number
        Content: String
    }
}


' User
' -----------------------------------------------

class UserEntry {
    Id: Number
    Username: String
    HashPassword: String
    HashUpdToken: String
    SignUpTime: Datetime
    SignInTime: Datetime
}

class UserLocation {
    UserId: Number
    Lon: Number
    Lat: Number
    Time: Datetime
}

class UserDetails {
    UserId: Number
    Description: String
    AvatarId: Number
    Gender: Number
    Age: Number
}

class UserOptions {
    UserId: Number
    HitMeUp: Number
}

class Avatar {
    Id: Number
    UserId: Number
    Label: String
    Time: Datetime
    Hash: String
}

class DeletedUser {
    UserId: Number
    Time: Datetime
}

' Mate
' -----------------------------------------------

class Mate {
    Id: Number
    FirstUserId: Number
    SecondUserId: Number
}

class MateRequest {
    Id: Number
    FromUserId: Number
    ToUserId: Number
    ReqTime: Datetime
    ResTime: Datetime
    Result: String
}

' Mate-chat
' -----------------------------------------------

class MateChat {
    Id: Number
    FirstUserId: Number
    SecondUserId: Number
}

class MateMessage {
    Id: Number
    MateChatId: Number
    FromUserId: Number
    Text: String
    Time: Datetime
}

class DeletedMateChat {
    ChatId: Number
    UserId: Number
}

' Geo-chat
' -----------------------------------------------

class GeoMessage {
    Id: Number
    FromUserId: Number
    Text: String
    Time: Datetime
    Lon: Number
    Lat: Number
}

' edges
' -----------------------------------------------

UserLocation --> UserEntry
UserOptions ---> UserEntry
UserDetails --> UserEntry
DeletedUser ---> UserEntry
UserDetails --> Avatar
Avatar -d- Image
Avatar -- UserEntry

' ***

GeoMessage --> UserEntry

' ***

MateRequest -d-> UserEntry
Mate -d- UserEntry

' ***
 
MateChat -u-> UserEntry
MateMessage -l-> UserEntry
MateMessage -l-> MateChat

' ***

DeletedMateChat -r-> MateChat
DeletedMateChat -u-> UserEntry

@enduml